--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "inquirer": "^8.2.5"
+    "express": "^4.18.2",
+    "inquirer": "^8.2.5",
+    "mysql2": "^2.2.5"
   }
 }
